--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "firebase": "^8.8.0",
+    "js-cookie": "^3.0.5",
     "next": "14.2.8",
     "next-themes": "^0.3.0",
     "react": "^18",
